nueva actualizacion con un anuncio

--- a/formulario2.html
+++ b/formulario2.html
@@ -44,8 +44,8 @@
 
         <div class="middle">
 
-            <article>
-                <h1>Portabilidad:</h1>
+            <article >
+                <h1 style="text-align: center;">Portabilidad:</h1>
                 <h2>Formá parte de la experiencia Codo-Net</h2>
                 <h2>Te bonificamos con un 50% OFF + 10GB extras durante los primeros 12 meses</h2>
                 <h3>¡Mantené tu número! Dejanos tus datos con el plan que se ajuste a vos y nos comunicamos en el dia
