pequeña modificacion con saludo de bienvenida

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+    <section class="welcome">
+        <h5 style="color: aqua;">¡BIENVENID@S A CODO-NET ARGENTINA!</h5>
+</section>
     
     <nav>
         
@@ -98,7 +101,7 @@
              <div></div>
 
              <div class="">
-             <h1> DESCARGÁ LA APP DE CODO-NET</b>
+             <h1> DESCARGÁ LA APP DE <b><i>CODO-NET</i></b></h1>
              <h3>PAGÁ TU FACTURA Y REALIZÁ TUS GESTIONES SIN MOVERTE DE TU CASA</h3>
              </div>
              <div class="">
