actualizacion de página del formulario

--- a/formulario2.html
+++ b/formulario2.html
@@ -43,34 +43,66 @@
         <!--contenido principal-->
 
         <div class="middle">
-
             <article >
-                <h1 style="text-align: center;">Portabilidad:</h1>
+                <h1 style="text-align: center;">PORTABILIDAD:</h1>
                 <h2>Formá parte de la experiencia Codo-Net</h2>
                 <h2>Te bonificamos con un 50% OFF + 10GB extras durante los primeros 12 meses</h2>
                 <h3>¡Mantené tu número! Dejanos tus datos con el plan que se ajuste a vos y nos comunicamos en el dia
                 </h3>
             </article>
+            <section class="grid-prom">
+                <div class="grid-item"><h2>LÍNEA CONTROL</h2>
+                    <h1>1GB</h1>
+                    <h5>Te invitamos 3 meses de Disney+</h5>
+                </div>
+                 <div class="grid-item"><h2>LÍNEA CONTROL</h2>
+                    <h1>3GB</h1>
+                    <h5>Te invitamos 3 meses de Disney+</h5>
+                </div>
+                 <div class="grid-item"><h2>LÍNEA CONTROL</h2>
+                    <h1>5GB</h1>
+                    <h5>Te invitamos 3 meses de Disney+</h5>
+                </div>
+                 <div class="grid-item"><h2>LÍNEA CONTROL</h2>
+                    <h1>8GB</h1>
+                    <h5>Te invitamos 3 meses de Disney+</h5>
+                </div>
+                 <div class="grid-item"><h2>LÍNEA CONTROL</h2>
+                    <h1>12GB</h1>
+                    <h5>Te invitamos 3 meses de Disney+</h5>
+                </div>
+                 <div class="grid-item"><h2>LÍNEA CONTROL</h2>
+                <h1>15GB</h1>
+                <h5>Te invitamos 3 meses de Disney+</h5>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            </section>
+            <section class="prom2">
+                <div>
+            <h5>todos los planes incluyen whatsapp, sms y llamadas ilimitadas</h5>
+           </div>
+            </section>
 
             <!--Formulario-->
-            
                 <form >
                     <div class="mb-3">
                         <label for="exampleInputName" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="exampleInputName">
+                        <input type="text" class="form-control" id="exampleInputName" placeholder="Escriba aqui...">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputLastName" class="form-label">Apellido</label>
-                        <input type="text" class="form-control" id="exampleInputLastName">
+                        <input type="text" class="form-control" id="exampleInputLastName" placeholder="Escriba aqui..." >
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba aqui...">
                         <div id="emailHelp" class="form-text"></div>
                     </div>
                     <div class="mb-4">
                         <label for="exampleInputPhone" class="form-label">Teléfono de contacto</label>
-                        <input type="text" class="form-control" id="exampleInputPhone">
+                        <input type="text" class="form-control" id="exampleInputPhone" placeholder="Escriba aqui...">
                         <div id="phoneHelp" class="form-text"></div>
                     </div>
                     <div class="input-group mb-4">
@@ -94,8 +126,7 @@
                     <button class="btn btn-outline-light" (click)="form.reset()">Reset</button>
                     <button type="submit" class="btn btn-outline-light">Enviar</button>
                 </form>
-            
-        </div>
+            </div>
 
 
         <!--Espacio lateral derecho-->
