--- a/formulario2.html
+++ b/formulario2.html
@@ -25,7 +25,10 @@
                     <div class="containerNav">
                         <a href="index.html"><img src="assets/img/xXWDpM4Z5GVi_400_200.png" class="logo" width=""
                                 alt="logoEmpresa"></a>
-                        <ul>
+                                <input type="checkbox" id="menu-toggle">
+                                <label for="menu-toggle"><i class="fas fa-bars"></i></label>
+                            
+                        <ul class="nav-menu">
                             <li><a href="index.html">Inicio</a></li>
                             <li><a href="#">Servicios</a></li>
                             <li><a href="#">Planes</a></li>
@@ -79,13 +82,8 @@
             <div></div>
             <div></div>
             </section>
-            <section class="prom2">
-                <div>
-            <h5>todos los planes incluyen whatsapp, sms y llamadas ilimitadas</h5>
-           </div>
-            </section>
-
-            <!--Formulario-->
+           
+             <!--Formulario-->
                 <form >
                     <div class="mb-3">
                         <label for="exampleInputName" class="form-label">Nombre</label>
