ajuste de unidades y ajuste de memenú hamburguesa

--- a/formulario2.html
+++ b/formulario2.html
@@ -17,10 +17,28 @@
 </head>
 
 <body>
+    <header>
+       
+
+        <nav>
+            <a href="index.html"><img src="./assets/img/xXWDpM4Z5GVi_400_200.png" class="logo" width=""
+                    alt="logoEmpresa"></a>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle"><i class="fas fa-bars"></i></label>
+           <ul class="nav-menu">
+                <li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;&nbsp;<a
+                        href="index.html">Inicio</a>
+                </li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Planes</a></li>
+                </ul>
+        </nav>
+    </header>
     <div class="container">
         <!--barra de navegacion /contenido del header-->
         <div class="above">
-            <header>
+            <h2>PASATE A <b><i>CODO-NET</i></b></h2>
+            <!-- <header>
                 <nav>
                     <div class="containerNav">
                         <a href="index.html"><img src="assets/img/xXWDpM4Z5GVi_400_200.png" class="logo" width=""
@@ -35,7 +53,7 @@
                         </ul>
                     </div>
                 </nav>
-            </header>
+            </header> -->
         </div>
 
         <!--Espacio Lateral izquierdo-->
