--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h3>PAGÁ TU FACTURA Y REALIZÁ TUS GESTIONES SIN MOVERTE DE TU CASA</h3>
             </div>
             <div class="">
-                <img src="assets/img/undraw_Mobile_application_re_13u3.png" width="35%" alt="">
+                <img src="assets/img/undraw_Mobile_application_re_13u3.png" width="45%" alt="">
                 <div>
 
                 </div>
@@ -137,7 +137,7 @@
             <div class="">
                 <img src="assets/img/20945319.jpg" width="50%" alt="">
                 <div>
-                    <h4 style="display: inline-block;"><img src="assets/img/bolt (1).png">ENVÍO GRATIS</h4>
+                    <h4 style="display: inline-block;"><img src="assets/img/bolt (1).png">&nbsp;ENVÍO GRATIS</h4>
                 </div>
             </div>
 
