--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 </head>
 
 <body>
+   
 
-    <header>
-        <div>
-            <h5 class="title" style="color: #00ffff;">¡BIENVENID@S A CODO-NET ARGENTINA!</h5>
+    <header id="header">
+        <div >
+            <h5 class="title">¡BIENVENID@S A CODO-NET ARGENTINA!</h5>
         </div>
 
         <nav>
@@ -34,23 +35,17 @@
             <label for="menu-toggle"><i class="fas fa-bars"></i></label>
 
 
-            <ul class="nav-menu">
-                <li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;&nbsp;<a
-                        href="index.html">Inicio</a>
+            <ul class="nav-menu slide">
+                <li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="index.html">Inicio</a>
                 </li>
-                <li><a href="#">Servicios</a></li>
+                <li>&nbsp;<a href="#">Servicios</a></li>
                 <li><a href="#">Planes</a></li>
-                <li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;&nbsp;<a href="formulario2.html"
-                        target="_blank">Portabilidad</a></li>
+                <li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="formulario2.html" target="_blank">Portabilidad</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
-
-
-
-        <!--carrusel de imagenes-->
+ <!--carrusel de imagenes-->
         <div class="slider-frame">
             <ul>
                 <li><img src="assets/img/banner_planes_2.jpg" alt="picture1"></li>
@@ -217,7 +212,7 @@
         </div>
         </footer>
 
-
+<script src="./js/nav.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
