update con página nueva

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="nav-menu slide">
                 <li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="index.html">Inicio</a>
                 </li>
-                <li>&nbsp;<a href="#">Servicios</a></li>
+                <li>&nbsp;<a href="./prod.html">Servicios</a></li>
                 <li><a href="#">Planes</a></li>
                 <li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="formulario2.html" target="_blank">Portabilidad</a></li>
             </ul>
@@ -54,8 +54,7 @@
                 <li><img src="assets/img/banner_app_new.jpg" alt="picture4"></li>
             </ul>
         </div>
-
-        <div class="grid-container">
+          <div class="grid-container">
             <div class="above">
                 <h2>CONOCÉ TODAS LAS OPCIONES QUE TENEMOS PARA VOS</h2>
             </div>
@@ -75,7 +74,6 @@
                 </div>
                 <h4>PACKS INTERNET</h4>
             </div>
-
             <div class="right">
                 <aside>
                     <div class="grid-item">
@@ -85,9 +83,7 @@
                 <H4>PACKS TV Y STREAMING</H4>
             </div>
         </div>
-        
-
-        <section class="grid-advert">
+       <section class="grid-advert">
             <div>
                 <h1>5G<span style=" display:inline-block;"><img src="assets/img/wifi.png" class="wifi-icon"
                             alt="wifiIcon" width="65%"></span></h1>
@@ -95,48 +91,40 @@
             <div>
                 <h2>SOMOS LA RED 5G</h2>
                 <h2>MÁS GRANDE DEL PAÍS</h2>
-
-
-            </div>
+        </div>
             <div>
             </div>
+         </section>
 
-        </section>
-
-        <section class="grid-app">
+       <section class="grid-app">
             <div></div>
-
-            <div class="">
+          <div class="">
                 <h1> DESCARGÁ LA APP DE <b><i>CODO-NET</i></b></h1>
                 <h3>PAGÁ TU FACTURA Y REALIZÁ TUS GESTIONES SIN MOVERTE DE TU CASA</h3>
             </div>
             <div class="">
                 <img src="assets/img/undraw_Mobile_application_re_13u3.png" width="45%" alt="">
                 <div>
-
-                </div>
+              </div>
             </div>
-
-            </div>
+        </div>
         </section>
 
-        <section class="grid-sim">
+      <section class="grid-sim">
             <div></div>
-
             <div class="">
                 <h1>PEDÍ TU <b style="color: #00000059;">CHIP PREPAGO</b></h1>
 
                 <h3>¡Y OBTENÉ MÚLTIPLES BENEFICIOS EN TODAS TUS RECARGAS!</h3>
-
-            </div>
+           </div>
             <div class="">
                 <img src="assets/img/20945319.jpg" width="50%" alt="">
                 <div>
                     <h4 style="display: inline-block;"><img src="assets/img/bolt (1).png">&nbsp;ENVÍO GRATIS</h4>
                 </div>
             </div>
+         </div>
 
-            </div>
         </section>
     </main>
     <footer>
