--- a/codo-net.html
+++ b/codo-net.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Codo-Net</title>
 	<link rel="stylesheet" href="./assets/css/styles_plan.css">
+	<script src="https://kit.fontawesome.com/45d21db9a0.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -13,9 +14,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Planes</a></li>
-				<li><a href="#">Servicios</a></li>
+				<li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="./index.html">Inicio</a></li>
+				
+				<li><a href="./prod.html">Servicios</a></li>
 				<li><a href="#">Contacto</a></li>
 			</ul>
 		</nav>
