--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="index.html">Inicio</a>
                 </li>
                 <li>&nbsp;<a href="./prod.html">Servicios</a></li>
-                <li><a href="#">Planes</a></li>
+                <li><a href="./codo-net.html">Planes</a></li>
                 <li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="formulario2.html" target="_blank">Portabilidad</a></li>
             </ul>
         </nav>
