--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
                 <li>&nbsp;<a href="./prod.html">Servicios</a></li>
                 <li><a href="./codo-net.html">Planes</a></li>
-                <li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="formulario2.html" target="_blank">Portabilidad</a></li>
+                <li><a href="formulario2.html" target="_blank">Portabilidad</a></li>
             </ul>
         </nav>
     </header>
