--- a/codo-net.html
+++ b/codo-net.html
@@ -16,11 +16,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="./index.html">Inicio</a>
-				</li>
-
-				<li><a href="./prod.html">Servicios</a></li>
-				<li><a href="#">Contacto</a></li>
+				<li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="./index.html">Inicio</a></li>
+                <li><i class="fa-solid fa-cart-shopping" style="display: inline;"></i>&nbsp;<a href="./prod.html">Servicios</a></li>
+				<li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="./formulario2.html">Contacto</a></li>
 			</ul>
 		</nav>
 		<div class="hero">
