--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Web</title>
+    <title>Inicio</title>
 
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <!--Hoja de estilos CSS-->
     <link rel="stylesheet" href="assets/css/styles.css">
     <!--CDN Bootstrap-->
@@ -14,11 +16,11 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!--Link Kit de fontawesome-->
     <script src="https://kit.fontawesome.com/45d21db9a0.js" crossorigin="anonymous"></script>
-   <!--fuente de google fonts principal-->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet">
-   
+    <!--fuente de google fonts principal-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet">
+
     <!--fuente de goolge fonts secundaria-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,31 +28,34 @@
 </head>
 
 <body>
-   
+
 
     <header id="header">
-        <div >
+        <div>
             <h5 class="title">¡BIENVENID@S A CODO-NET ARGENTINA!</h5>
         </div>
 
         <nav>
             <a href="index.html"><img src="./assets/img/xXWDpM4Z5GVi_400_200.png" class="logo" width=""
                     alt="logoEmpresa"></a>
-                  
+
             <input type="checkbox" id="menu-toggle">
             <label for="menu-toggle"><i class="fas fa-bars"></i></label>
 
 
             <ul class="nav-menu slide">
                 <li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="index.html">Inicio</a></li>
-                <li><i class="fa-solid fa-cart-shopping" style="display: inline;"></i>&nbsp;<a href="./prod.html" target="_blank">Servicios</a></li>
-                <li> <i class="fa-solid fa-file-lines" style="display: inline;"></i>&nbsp;<a href="./codo-net.html" target="_blank">Planes</a></li>
-                <li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="formulario2.html" target="_blank">Portabilidad</a></li>
+                <li><i class="fa-solid fa-cart-shopping" style="display: inline;"></i>&nbsp;<a href="./services.html"
+                        target="_blank">Servicios</a></li>
+                <li> <i class="fa-solid fa-file-lines" style="display: inline;"></i>&nbsp;<a href="./codo-net.html"
+                        target="_blank">Planes</a></li>
+                <li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="formulario2.html"
+                        target="_blank">Portabilidad</a></li>
             </ul>
         </nav>
     </header>
     <main>
- <!--carrusel de imagenes-->
+        <!--carrusel de imagenes-->
         <div class="slider-frame">
             <ul>
                 <li><img src="assets/img/banner_planes_2.jpg" alt="picture1"></li>
@@ -59,7 +64,7 @@
                 <li><img src="assets/img/banner_app_new.jpg" alt="picture4"></li>
             </ul>
         </div>
-          <div class="grid-container">
+        <div class="grid-container">
             <div class="above">
                 <h2>CONOCÉ TODAS LAS OPCIONES QUE TENEMOS PARA VOS</h2>
             </div>
@@ -88,7 +93,7 @@
                 <H4>PACKS TV Y STREAMING</H4>
             </div>
         </div>
-       <section class="grid-advert">
+        <section class="grid-advert">
             <div class="picture">
                 <h1>5G<span style=" display:inline-block;"><img src="assets/img/wifi.png" class="wifi-icon"
                             alt="wifiIcon" width="65%"></span></h1>
@@ -96,103 +101,107 @@
             <div>
                 <h2>SOMOS LA RED 5G</h2>
                 <h2>MÁS GRANDE DEL PAÍS</h2>
-        </div>
+            </div>
             <div>
             </div>
-         </section>
+        </section>
 
-       <section class="grid-app">
+        <section class="grid-app">
             <div></div>
-          <div class="">
+            <div class="">
                 <h1> DESCARGÁ LA APP DE <b style="color: #00000059;"><i>CODO-NET</i></b></h1>
                 <h3>PAGÁ TU FACTURA Y REALIZÁ TUS GESTIONES SIN MOVERTE DE TU CASA</h3>
             </div>
             <div class="picture">
                 <img src="assets/img/undraw_Mobile_application_re_13u3.png" width="45%" alt="">
                 <div>
-              </div>
+                </div>
             </div>
-        </div>
+            </div>
         </section>
 
-      <section class="grid-sim">
+        <section class="grid-sim">
             <div></div>
             <div class="">
                 <h1>PEDÍ TU <b style="color: #00000059;"><i>CHIP PREPAGO</i></b></h1>
 
                 <h3>¡Y OBTENÉ MÚLTIPLES BENEFICIOS EN TODAS TUS RECARGAS!</h3>
-           </div>
+            </div>
             <div class="picture">
                 <img src="assets/img/20945319.jpg" width="50%" alt="">
                 <div>
                     <h4 style="display: inline-block;"><img src="assets/img/bolt (1).png">&nbsp;ENVÍO GRATIS</h4>
                 </div>
             </div>
-         </div>
+            </div>
 
         </section>
     </main>
     <footer>
         <div class="footContainer">
             <div class="group1">
-                <div >
-                <img src="./assets/img/xXWDpM4Z5GVi_400_200.png" width="160%" class="footerLogo" alt="logoEmpresa">
-                <h5>Ventas</h5>
-                <p><span style="display: inline-block;"><i class="fa-solid fa-phone"></i></span>&nbsp;0800-333-0000</p>
-                <h5>Atencion al cliente</h5>
-                <p><span style="display: inline-block;"><i class="fa-solid fa-phone"></i></span>&nbsp;0800-333-9500</p>
-                <p><span style="display: inline-block;"><i class="fa-solid fa-envelope"></i></span>&nbsp;clientes@codo-net.com</p>
-            </div>
+                <div>
+                    <img src="./assets/img/xXWDpM4Z5GVi_400_200.png" width="160%" class="footerLogo" alt="logoEmpresa">
+                    <h5>Ventas</h5>
+                    <p><span style="display: inline-block;"><i class="fa-solid fa-phone"></i></span>&nbsp;0800-333-0000
+                    </p>
+                    <h5>Atencion al cliente</h5>
+                    <p><span style="display: inline-block;"><i class="fa-solid fa-phone"></i></span>&nbsp;0800-333-9500
+                    </p>
+                    <p><span style="display: inline-block;"><i
+                                class="fa-solid fa-envelope"></i></span>&nbsp;clientes@codo-net.com</p>
+                </div>
             </div>
             <div class="group2">
-            <div >
-                <h4>Planes</h4>
-                <p>Telefonia móvil</p>
-                <p>Internet</p>
-                <p>Telefonia móvil + Internet</p>
-                <p>Línea Hogar</p>
-                <p>Codo-Net Play</p>
-            </div>
-            </div>
-          <div class="group3">
-            <div>
-                <h4>Productos</h4>
-                <p>Codo-Net WiFi</p>
-                <p>Codo-Net Alexa</p>
-                <p>Codo-Net Full</p>
-            </div>
-          </div>
-          <div class="group4">
-            <div >
-                <h4>Codo-Net Premium</h4>
-                <p>Netflix</p>
-                <p>Amazon Prime</p>
-                <p>Disney+</p>
-                <p>Star+</p>
-                <p>Universal</p>
-            </div>
-          </div>
-          <div class="group5">
-            <div>
-                <h4>Redes Sociales</h4>
-                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
-                <a href="https://web.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
-                <div class="app">
-                    <h4>Descargá nuestra App</h4>
-                    <a href="https://play.google.com" target="_blank"><img src="assets/img/google-play-min.png"
-                            alt="googlePlayLogo"></a>
-                    <br><br>
-                    <a href="https://www.apple.com/store" target="_blank"><img src="assets/img/app-store-min.png"
-                            alt="appleStoreLogo"></a>
+                <div>
+                    <h4>Planes</h4>
+                    <p>Telefonia móvil</p>
+                    <p>Internet</p>
+                    <p>Telefonia móvil + Internet</p>
+                    <p>Línea Hogar</p>
+                    <p>Codo-Net Play</p>
                 </div>
-                <div class="qrCode">
-                    <img src="assets/img/qrCode.png" alt="qrCode" width="25%">
+            </div>
+            <div class="group3">
+                <div>
+                    <h4>Productos</h4>
+                    <p>Codo-Net WiFi</p>
+                    <p>Codo-Net Alexa</p>
+                    <p>Codo-Net Full</p>
+                </div>
+            </div>
+            <div class="group4">
+                <div>
+                    <h4>Codo-Net Premium</h4>
+                    <p>Netflix</p>
+                    <p>Amazon Prime</p>
+                    <p>Disney+</p>
+                    <p>Star+</p>
+                    <p>Universal</p>
+                </div>
+            </div>
+            <div class="group5">
+                <div>
+                    <h4>Redes Sociales</h4>
+                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i
+                            class="fa-brands fa-instagram fa-2xl"></i></a>
+                    <a href="https://web.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+                    <div class="app">
+                        <h4>Descargá nuestra App</h4>
+                        <a href="https://play.google.com" target="_blank"><img src="assets/img/google-play-min.png"
+                                alt="googlePlayLogo"></a>
+                        <br><br>
+                        <a href="https://www.apple.com/store" target="_blank"><img src="assets/img/app-store-min.png"
+                                alt="appleStoreLogo"></a>
+                    </div>
+                    <div class="qrCode">
+                        <img src="assets/img/qrCode.png" alt="qrCode" width="25%">
 
+                    </div>
                 </div>
             </div>
-          </div>
             <div></div>
             <div></div>
             <div></div>
@@ -204,9 +213,9 @@
             <small>Los servicios que presta Codo-Net S.A. están sujetos a disponibilidad técnica y geográfica dentro del
                 territorio Argentino. 2023 Codo-Net S.A. ®Todos los derechos reservados.</small>
         </div>
-        </footer>
+    </footer>
 
-<script src="./js/nav.js"></script>
+    <script src="./js/nav.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
