--- a/codo-net.html
+++ b/codo-net.html
@@ -4,8 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Codo-Net</title>
+	<title>Planes</title>
+	<!--FAVICON-->
+	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+	<!--Hoja de estilos Css-->
 	<link rel="stylesheet" href="./assets/css/styles_plan.css">
+	<!--Link de fontawesome-->
 	<script src="https://kit.fontawesome.com/45d21db9a0.js" crossorigin="anonymous"></script>
 
 </head>
@@ -13,76 +17,91 @@
 <body>
 
 	<!-- header section -->
-	<header>
+	<header id="header">
 		<nav>
+			<a href="index.html"><img src="./assets/img/xXWDpM4Z5GVi_400_200.png" class="logo" width=""
+					alt="logoEmpresa" /></a>
+			<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle"><i class="fas fa-bars"></i></label>
 			<ul>
-				<li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="./index.html">Inicio</a></li>
-                <li><i class="fa-solid fa-cart-shopping" style="display: inline;"></i>&nbsp;<a href="./prod.html">Servicios</a></li>
-				<li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a href="./formulario2.html">Contacto</a></li>
+				<li><i class="fa-solid fa-house" style="display: inline;"></i>&nbsp;<a href="./index.html">Inicio</a>
+				</li>
+				<li><i class="fa-solid fa-cart-shopping" style="display: inline;"></i>&nbsp;<a
+						href="./services.html">Servicios</a></li>
+				<li><i class="fa-solid fa-sim-card" style="display: inline;"></i>&nbsp;<a
+						href="formulario2.html">Portabilidad</a></li>
 			</ul>
 		</nav>
-		<div class="hero">
-			<h1>Internet, TV y teléfono</h1>
-			<p>Conoce nuestros planes y servicios</p>
-			<a href="#" class="btn">Ver planes</a>
-		</div>
+
 	</header>
 	<!-- end of header section -->
 
+	<div class="hero">
+		<h1>Internet, TV y teléfono</h1>
+		<p>Conoce nuestros planes y servicios</p>
+	</div>
 	<!-- main section -->
 	<main>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="script.js"></script>
+
 		<section class="plans">
 			<div class="container">
 				<h2>Nuestros planes</h2>
 				<div class="plan">
 					<h3>Plan Básico</h3>
+					<i class="fa-solid fa-star"></i>
 					<p>Internet de alta velocidad y telefonía fija</p>
 					<span class="price">$1000</span>
 					<a href="#" class="btn">Contratar</a>
 				</div>
+
 				<div class="plan">
 					<h3>Plan Premium</h3>
+					<i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
 					<p>Internet de alta velocidad, telefonía fija y TV por cable</p>
 					<span class="price">$2000</span>
 					<a href="#" class="btn">Contratar</a>
 				</div>
 				<div class="plan">
 					<h3>Plan Ultra</h3>
+					<i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
 					<p>Internet de alta velocidad, telefonía fija, TV por cable y móvil</p>
 					<span class="price">$3000</span>
 					<a href="#" class="btn">Contratar</a>
 				</div>
 			</div>
+
 		</section>
-		<section class="services">
-			<div class="container">
-				<h2>Nuestros servicios</h2>
-				<div class="service">
-					<i class="fas fa-wifi"></i>
-					<h3>Internet de alta velocidad</h3>
-					<p>Conexión estable y rápida para que navegues sin límites</p>
-				</div>
-				<div class="service">
-					<i class="fas fa-tv"></i>
-					<h3>TV por cable</h3>
-					<p>La mejor programación para toda la familia</p>
-				</div>
-				<div class="service">
-					<i class="fas fa-phone"></i>
-					<h3>Telefonía fija y móvil</h3>
-					<p>Comunícate con tus amigos y familiares sin límites</p>
-				</div>
+		<section class="lottery">
+			<h3>Ganadores de planes Ultra del mes</h3><br>
+			<a href="./users.html" class="btn">Ver Lista</a>
+		</section>
+		<section class="grid-iframe">
+			<div>
+				<h1>También podés visitarnos en nuestras oficinas de Puerto Madero</h1>
+			</div>
+			<div>
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26269.017830598175!2d-58.372868491659176!3d-34.613586598931136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334d9c2d70389%3A0xe7b5e9ee316678f!2sPuerto%20Madero%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1683689718575!5m2!1ses-419!2sar"
+					class="map" width="400" height="250" allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+			<div>
+				<h2>Ver oficinas del interior del país</h2>
+				<br>
+				<a href="./map.html" class="btn" target="_blank">Click aquí</a>
 			</div>
 		</section>
 	</main>
 	<!-- end of main section -->
 
+
 	<!-- footer section -->
 	<footer>
 		<div class="container">
 			<h4> ® Todos los derechos reservados </h4>
-			<form action="#">
-				<label for="name"></label>
-				<input type="text" id="name" name="
+			<p>Codo-Net 2023</p>
+		</div>
+	</footer>
+</body>
+
+</html>
